# rustsh

./: .gitignore  Cargo.toml  README.md
src/: .lib.rs.swp  .main.rs.swp  lib.rs  main.rs
tests/: test.rs
