[package]
name = "color_prompt"
version = "0.1.0"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.16.0"
subprocess = "0.2.4"

[lib]
name = "color_lexer"
src = "src/lib.rs"
