[package]
name = "rustsh"
version = "0.1.0"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.16.0"
subprocess = "0.2.4"
termion = "*"
logos = "0.9.7"

[lib]
name = "rustsh"
